--- a/client/index.html
+++ b/client/index.html
@@ -61,7 +61,7 @@
   <header class="header" id="header">
     <div class="container-fluid">
       <div class="row height-max align-items-center">
-        <div class="col col-md-9 ml-auto text-right pr-5">
+        <div class="col col-md-9 ml-auto text-right pr-5 text">
           <h5 class="title-heading d-inline-block p02 text-uppercase">the all new</h5>
           <h2 class="text-uppercase my-2 title">2019 sports cars</h2>
           <h3 class="text-uppercase">all models</h3>
